--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   color: #61dafb;
 }
 
+.btnroomadd{
+  border-radius: 50%
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -31,3 +35,5 @@
     transform: rotate(360deg);
   }
 }
+
+@import url(https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css)
